--- a/app/src/main/res/layout/groundnut_seed_20_layout.xml
+++ b/app/src/main/res/layout/groundnut_seed_20_layout.xml
@@ -363,7 +363,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Kapachi Outturn"
+                android:text="Kapchi Outturn"
                 android:id="@+id/f1"
                 android:layout_weight="1"
                 android:layout_column="0"
