--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,20 @@
     <!-- Per the design guidelines, navigation drawers should be between 240dp and 320dp:
          https://developer.android.com/design/patterns/navigation-drawer.html -->
     <dimen name="navigation_drawer_width">240dp</dimen>
+
+<dimen name="fab_margin">16dp</dimen>
+<dimen name="item_offset">10dp</dimen>
+<dimen name="detail_backdrop_height">200dp</dimen>
+<dimen name="backdrop_title">30dp</dimen>
+<dimen name="backdrop_subtitle">18dp</dimen>
+<dimen name="card_margin">5dp</dimen>
+<dimen name="card_album_radius">3dp</dimen>
+<dimen name="album_cover_height">160dp</dimen>
+<dimen name="album_title_padding">8dp</dimen>
+<dimen name="album_title">15dp</dimen>
+<dimen name="songs_count_padding_bottom">8dp</dimen>
+<dimen name="songs_count">12dp</dimen>
+<dimen name="ic_album_overflow_width">20dp</dimen>
+<dimen name="ic_album_overflow_height">30dp</dimen>
+<dimen name="ic_album_overflow_margin_top">10dp</dimen>
 </resources>
