Mac | Payment Done

--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -5,21 +5,20 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.oil.vivek.cottoncalculator.aboutUs"
+    tools:context="com.oil.vivek.oilmillcalc.aboutUs"
     android:background="#16170432"
     android:clickable="true"
     android:id="@+id/test">
 
 
-
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/imageView"
-        android:src="@drawable/ic_launcher"
-        android:layout_above="@+id/trialDays"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp" />
+        android:layout_marginTop="15dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/ic_launcher" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -28,88 +27,131 @@
         android:text="@string/app_name"
         android:id="@+id/AppName"
         android:textSize="22sp"
-
-        android:layout_above="@+id/imageView"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp" />
+        android:layout_below="@+id/imageView"
+        android:layout_marginTop="10dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Trial Version"
+        android:text="@string/trial_version"
         android:id="@+id/trialDays"
         android:textColor="#ffc00200"
-        android:layout_above="@+id/contactInfo"
+        android:layout_below="@+id/AppName"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp" />
+        android:layout_marginTop="10dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="For details, Call or Whatsapp us at +91-8758942160"
+        android:text="Need help? Call or Whatsapp us at +91-8758942160"
         android:id="@+id/contactInfo"
         android:gravity="center_horizontal"
-        android:textSize="18dp"
-        android:autoLink="phone|email"
-        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="25dp"
-        android:layout_centerInParent="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Make full Payment and click the below button to activate"
-        android:id="@+id/textView5"
-        android:gravity="center_horizontal"
         android:textSize="18dp"
         android:autoLink="phone|email"
+        android:layout_marginTop="15dp"
+        android:layout_below="@+id/trialDays"
+        />
+
+    <LinearLayout
+        android:id="@+id/pay_view"
         android:layout_below="@+id/contactInfo"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center_horizontal">
+
+        <View
+            android:id="@+id/hr"
+            android:layout_width="fill_parent"
+            android:layout_height="2dp"
+            android:background="#c0c0c0"
+            android:layout_below="@+id/contactInfo"
+            android:layout_marginTop="20dp"
+            />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="*INTERNET REQUIRED*"
-        android:id="@+id/textView6"
-        android:singleLine="true"
-        android:textColor="#ffd60300"
-        android:textSize="18dp"
-        android:layout_below="@+id/textView5"
+        android:text="Activate Full Version"
+        android:textColor="#ff008174"
+        android:id="@+id/paymentOptions"
+        android:gravity="center_horizontal"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="7dp" />
+        android:textSize="18sp"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/hr"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Amount Rs. 300"
+        android:textStyle="bold"
+        android:id="@+id/paymentDetails"
+        android:gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
+        android:textSize="15sp"
+        android:layout_marginTop="15dp"
+        android:layout_below="@+id/paymentOptions"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Paytm/MobiKwik : +91 87589 42160"
+        android:id="@+id/paytm"
+        android:textStyle="bold"
+        android:autoLink="phone"
+        android:gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
+        android:textSize="15sp"
+        android:layout_marginTop="35dp"
+        android:layout_below="@+id/paymentOptions"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="OR"
+        android:id="@+id/or"
+        android:gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
+        android:textSize="12sp"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/paytm"
+        />
 
     <Button
         android:id="@+id/pay_online"
-        style="@style/Button"
-        android:layout_width="wrap_content"
+        android:layout_width="110dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/button_active"
+        android:background="@drawable/pay_button"
         android:text="Pay Online"
-        android:layout_above="@+id/AppName"
-        android:layout_alignLeft="@+id/final_activate"
-        android:layout_alignStart="@+id/final_activate" />
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/or"
+        android:layout_centerHorizontal="true" />
 
-    <Button
-        android:id="@+id/final_activate"
-        style="@style/Button"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView6"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="(Credit Card/ Debit Card / Netbanking / Wallets)"
+        android:id="@+id/pay_online_des"
+        android:gravity="center_horizontal"
         android:layout_centerHorizontal="true"
-        android:layout_gravity="right"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/button_active"
-        android:text="Activate" />
+        android:textSize="14sp"
+        android:layout_marginTop="8dp"
+        android:layout_below="@+id/pay_online"
+        />
+    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
@@ -122,7 +164,8 @@
         android:layout_toRightOf="@+id/AppName"
         android:layout_toEndOf="@+id/AppName"
         android:layout_marginBottom="2dp"
-        android:layout_marginLeft="2dp" />
+        android:layout_marginLeft="3dp" />
+
 
     <TextView
         android:layout_width="wrap_content"
