--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -13,10 +13,10 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:scaleType="fitXY"
         android:src="@drawable/ic_launcher" />
 
@@ -26,7 +26,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/app_name"
         android:id="@+id/AppName"
-        android:textSize="22sp"
+        android:textSize="20sp"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/imageView"
         android:layout_marginTop="10dp"/>
@@ -40,7 +40,7 @@
         android:textColor="#ffc00200"
         android:layout_below="@+id/AppName"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="5dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -97,7 +97,7 @@
         android:gravity="center_horizontal"
         android:layout_centerHorizontal="true"
         android:textSize="15sp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="25dp"
         android:layout_below="@+id/paymentOptions"
         />
 
@@ -112,8 +112,8 @@
         android:gravity="center_horizontal"
         android:layout_centerHorizontal="true"
         android:textSize="15sp"
-        android:layout_marginTop="35dp"
-        android:layout_below="@+id/paymentOptions"
+        android:layout_marginTop="5dp"
+        android:layout_below="@+id/paymentDetails"
         />
 
     <TextView
